# oemof-thermal

./: .flake8  .gitignore  .pylintrc  .travis.yml  LICENSE  README.rst  VERSION  pyproject.toml  setup.py  tox.ini
.github/workflows/: tox_checks.yml
docs/: absorption_chillers.rst  api.rst  cogeneration.rst  comp.rst  compression_heat_pumps_and_chillers.rst  concentrating_solar_power.rst  conf.py  examples.rst  getting_started.rst  heat_pipeline.rst  heat_pump.rst  hot_water_storage.rst  index.rst  overview.rst  solar_thermal_collector.rst  stratified_thermal_storage.rst  theoretical_considerations.rst  validation_absorption_chillers.rst  validation_compression_heat_pumps_and_chillers.rst  validation_concentrating_solar_power.rst  validation_solar_thermal_collector.rst  validation_stratified_thermal_storage.rst  whats_new.rst
docs/_pics/: README.rst
docs/api/: modules.rst  oemof-thermal.rst  oemof_heat_components.rst  oemof_heat_components.variable_chp.rst
docs/whats_new/: v0-0-1.rst  v0-0-2.rst  v0-0-3.rst  v0-0-4.rst  v0-0-5.rst  v0-0-5dev.rst  v0-0-6.rst  v0-0-6dev.rst  v0-0-7.rst  v0-0-8.rst  v0-0-9.rst  v0-0.3.rst
docs/whatsnew/: v0.0.2.rst
examples/: check_examples.py
examples/CSP/: CSP_example.py  CSP_plot_example.py  csp_collector_plot_example.py  csp_plant_example.py
examples/absorption_heatpump_and_chiller/: absorption_chiller.py  (+1 more)
src/oemof/thermal/: CSP.py  (+14 more)
tests/: test_absorption_chillers.py  test_compression_heatpumps_and_chillers.py  test_concentrating_solar_power.py  test_constraints.py  test_csp.py  test_csp_temp.py  test_functions.py
(+111 files in other folders)
