[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "LICENSE",
    "README.rst",
    "docs/",
    "examples/",
    "src/",
    "tests/",
    ".pylintrc",
    "tox.ini",
]

[project]
name = "oemof.thermal"
dynamic = ["version"]
description = "Thermal energy components for  the open energy modelling framework."
readme = "README.rst"
authors = [
    {name = "oemof developer group", email = "contact@oemof.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

requires-python = ">=3.9"
dependencies = [
    'oemof.solph <= 0.5.5',
    'matplotlib',
    'pvlib <= 0.9.0',
    'numpy >= 1.16.5',
    'pandas >= 0.18.0'
]
license = {text = "MIT"}

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
force_single_line = true
line_length = 79
